Fix some warnings
Fix some warnings